# Touchline-RPG

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  run.py
.github/workflows/: tests.yml
saves/: .gitkeep
tests/: conftest.py  test_launcher.py  test_smoke.py
tests/engine/: test_career.py  test_cup.py  test_finance.py  test_generation.py  test_progression.py  test_scheduling.py  test_simulation.py  test_tactics.py  test_transfers.py
tests/persistence/: test_repositories.py  test_save_manager.py
tests/web/: test_routes_smoke.py
touchline/: __init__.py  config.py
touchline/data/: club_name_parts.json  first_names.json  last_names.json
touchline/desktop/: __init__.py  launcher.py
touchline/engine/: __init__.py  career.py  constants.py  cup.py  finance.py  generation.py  models.py  progression.py  rng.py  scheduling.py  season_calendar.py  simulation.py  state.py  transfers.py
touchline/persistence/: __init__.py  db.py  mappers.py  orm_models.py  repositories.py  save_manager.py
touchline/web/: __init__.py  active_save.py  helpers.py
touchline/web/routes/: __init__.py  club.py  dashboard.py  match.py  player.py  saves.py  season.py  transfers.py
touchline/web/static/css/: app.css
touchline/web/templates/: base.html  career_over.html  cup.html  dashboard.html  finances.html  fixtures.html  history.html  match.html  new_career.html  player.html  saves.html  squad.html  standings.html  tactics.html  transfers.html
touchline/web/templates/partials/: dashboard_content.html  recap.html
